[package]
name = "github-get-folder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
camino = "1.1.6"
clap = { version = "4.5.4", features = ["derive", "env"] }
graphql_client = "0.14.0"
serde = { version = "1.0.199", features = ["derive"] }
ureq = { version = "2.9.7", features = ["json"] }

[dev-dependencies]
