[package]
name = "github-get-folder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
camino = "1.1.6"
clap = { version = "4.5.4", features = ["derive", "env"] }
futures = "0.3.30"
graphql_client = "0.14.0"
itertools = "0.13.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.199", features = ["derive"] }
tokio = { version = "1.38.0", features = ["rt", "fs"] }

[dev-dependencies]
